[package]
name = "getaddress"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
dns-lookup = "2.0.4"
fern = { version = "0.7", features = ["colored"] }
log = "0.4.22"
maxminddb = "0.24.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10.8"
